--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,8 @@
 }
 .header{
     background-color:#6699ff;
-    position: relative;
-    top: -1.5vw;
     width: 100vw;
-    left: -1.5vw;
+    height: 1vw;
 }
 .intro{
     font-size: 3vw;
