--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,10 @@
 }
 .header{
     background-color:#6699ff;
+    position: relative;
+    top: -1.5vw;
     width: 100vw;
-    height: 1vw;
+    left: -1.5vw;
 }
 .intro{
     font-size: 3vw;
